# mihomo-rust

./: .gitignore  BENCHMARK.md  Cargo.toml  HYBRID_ARCHITECTURE.md  LICENSE  PHASE0_COMPLETE.md  PHASE3_COMPLETE.md  PHASE_4_6_SUMMARY.md  README.md  config.yaml  test-hybrid-config.yaml
.cargo/: config.toml
.github/workflows/: build.yml
benches/: api_bench.rs
scripts/: gcp_deploy.sh
scripts/perf/: CLOUD_PERF_TESTING.md  README.md  config_cloud_direct.yaml  config_direct.yaml  config_go_direct.yaml  config_go_fallback.yaml  fake_mihomo_connect.rs  loadgen_http_connect.py  loadgen_http_proxy.py  loadgen_socks5.py  run_docker_matrix.ps1  target_server.py  tls_bench_go.go
src/: lib.rs  lib.rs.bak  main.rs
src/common/: buffer.rs  error.rs  http_pool.rs  memory_pressure.rs  metadata.rs  mod.rs  net.rs  pool_predictor.rs  proxy_node_selection.rs  socks.rs
src/config/: mod.rs  parser.rs  splitter.rs
src/dns/: cache.rs  mod.rs  resolver.rs
src/hub/: auth.rs  common.rs  configs.rs  connections.rs  dns.rs  groups.rs  ipc_unix.rs  ipc_windows.rs  logs.rs  memory.rs  mod.rs  providers.rs  proxies.rs  rules.rs  traffic.rs  upgrade.rs
src/inbound/: http.rs  http_client.rs  http_response.rs  mixed.rs  mod.rs  socks5.rs
src/outbound/: classifier.rs  direct.rs  http.rs  hybrid.rs  hysteria2.rs  mod.rs  mod.rs.bak  reject.rs  shadowsocks.rs  socks5.rs  tcp_warm_pool.rs  trojan.rs  vless.rs  vmess.rs
src/outbound/go_fallback/: manager.rs  mod.rs  process.rs  proxy.rs
src/provider/: fetcher.rs  healthcheck.rs  mod.rs  mod.rs.bak  proxy.rs  rule.rs
src/proxy/: fallback.rs  loadbalance.rs  mod.rs  selector.rs  urltest.rs
src/rule/: engine.rs  geoip.rs  mod.rs  trie.rs
src/statistic/: mod.rs  tracker.rs
src/transport/: mod.rs  websocket.rs
src/tunnel/: connection.rs  mod.rs  router.rs
tests/: integration_tests.rs
