[package]
name = "mihomo-rust"
version = "1.10.0"
edition = "2021"
authors = ["Tsang"]
description = "High-performance Rust implementation of mihomo (100% API compatible)"
license = "MIT"
readme = "README.md"
repository = "https://github.com/tsang/mihomo-rust"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "rt-multi-thread", "sync", "time", "net", "io-util", "macros", "signal"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }

# Web framework (REST API)
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Networking
socket2 = { version = "0.5", features = ["all"] }
bytes = "1.5"

# TLS - upgraded to rustls 0.23 + aws-lc-rs for better performance
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "std", "tls12"] }
rustls-pemfile = "2.0"
webpki-roots = "0.26"
aws-lc-rs = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1.0"
http-body-util = "0.1"
httparse = "1.10"

# DNS
hickory-resolver = { version = "0.24", features = ["tokio-runtime", "dns-over-https-rustls", "dns-over-rustls"] }
hickory-proto = "0.24"

# SHA1 for WebSocket
sha1 = "0.10"

# URL encoding
urlencoding = "2.1"

# Random generation
getrandom = "0.2"

# QUIC for Hysteria2 - upgraded to quinn 0.11 for rustls 0.23 compatibility
quinn = { version = "0.11", default-features = false, features = ["rustls", "runtime-tokio"] }

# Crypto
aes = "0.8"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
ring = "0.17"
md-5 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
hmac = "0.12"
hkdf = "0.12"
rand = "0.8"
uuid = { version = "1.6", features = ["v4", "serde"] }
base64 = "0.21"
hex = "0.4"

# Constant-time comparison for auth
subtle = "2.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utils
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
parking_lot = "0.12"
dashmap = "5.5"
lru = "0.12"
fnv = "1.0"
crc32fast = "1.4"
once_cell = "1.19"
futures = "0.3"
futures-util = "0.3"
pin-project-lite = "0.2"
url = "2.5"
ipnet = "2.9"
maxminddb = "0.24"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }

# Command line
clap = { version = "4.4", features = ["derive"] }

# System info
num_cpus = "1.16"

# High-performance allocator (reduces p99 latency variance)
mimalloc = { version = "0.1", default-features = false }

# Unix-specific
[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal", "process"] }
libc = "0.2"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[[bench]]
name = "api_bench"
harness = false

[[bin]]
name = "tls_bench"
path = "src/bin/tls_bench.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[features]
default = []
jemalloc = []
